# FileLens

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: config.rs  main.rs  registry.rs  ui.rs
src/analysis/: hashes.rs  hex.rs  info.rs  metadata.rs  mod.rs  pe_details.rs  strings.rs
