[package]
name = "filelens"
version = "1.0.0"
edition = "2021"
description = "Right-click context menu file inspector for Windows"

[dependencies]
eframe = { version = "0.29", features = ["persistence"] }
egui = "0.29"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_System_SystemInformation",
] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "s"
lto = true
strip = true